# RayTracer

./: .ccls  .env  .gitignore  CMakeLists.txt  README.md  clean.sh  compile_commands.json  learnings.txt  nohup.out  run.sh  test.sh
src/: :w  CMakeLists.txt  all.cpp  camera.cpp  camera.h  canvas.cpp  canvas.h  color.cpp  color.h  computation.cpp  computation.h  intersection.cpp  intersection.h  lighting.cpp  lighting.h  main.cpp  material.cpp  material.h  matrix.cpp  matrix.h  plane.cpp  plane.h  point.cpp  point.h  point_light.cpp  point_light.h  projectile.cpp  projectile.h  ray.cpp  ray.h  shape.cpp  shape.h  shape_types.h  sphere.cpp  sphere.h  try.cpp  try.h  tuple.cpp  tuple.h  utils.h  (+4 more)
tests/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  color_test.cpp  computation_test.cpp  intersect_test.cpp  lighting_test.cpp  material_test.cpp  matrix_test.cpp  plane_test.cpp  point_light_test.cpp  ray_test.cpp  shape_test.cpp  sphere_test.cpp  test_try.cpp  tuple_test.cpp  vec_test.cpp  world_test.cpp
