add_library(tuple tuple.cpp)
add_library(vec vec.cpp)
add_library(point point.cpp)
add_library(color color.cpp)
add_library(canvas canvas.cpp)
add_library(matrix matrix.cpp)
add_library(ray ray.cpp)
add_library(shape shape.cpp)
add_library(sphere sphere.cpp)
add_library(intersection intersection.cpp)

add_executable(main main.cpp)

target_link_libraries(vec tuple)
target_link_libraries(point tuple)
target_link_libraries(color tuple)
target_link_libraries(canvas color)
target_link_libraries(sphere shape)

target_link_libraries(main intersection sphere ray matrix vec point canvas)
