add_library(tuple tuple.cpp)
add_library(vec vec.cpp)
add_library(point point.cpp)
add_library(color color.cpp)
add_library(canvas canvas.cpp)
add_library(matrix matrix.cpp)
add_library(ray ray.cpp)
add_library(shape shape.cpp)
add_library(sphere sphere.cpp)
add_library(intersection intersection.cpp)
add_library(point_light point_light.cpp)
add_library(material material.cpp)
add_library(lighting lighting.cpp)
add_library(world world.cpp)
add_library(computation computation.cpp)

add_executable(main main.cpp)

target_link_libraries(vec tuple)
target_link_libraries(point tuple)
target_link_libraries(matrix vec)
target_link_libraries(color vec point)
target_link_libraries(canvas color)
target_link_libraries(shape material)
target_link_libraries(sphere shape)
target_link_libraries(intersection ray)
target_link_libraries(lighting point_light material point vec)
target_link_libraries(world lighting intersection)
target_link_libraries(computation intersection)

target_link_libraries(main world computation lighting material point_light intersection sphere ray matrix vec point canvas)
