add_library(tuple tuple.cpp)
add_library(vec vec.cpp)
add_library(point point.cpp)
add_library(color color.cpp)
add_library(canvas canvas.cpp)
add_library(matrix matrix.cpp)
add_library(ray ray.cpp)
add_library(shape shape.cpp)
add_library(sphere sphere.cpp)
add_library(intersection intersection.cpp)
add_library(point_light point_light.cpp)
add_library(material material.cpp)
add_library(lighting lighting.cpp)
add_library(world world.cpp)
add_library(computation computation.cpp)
add_library(camera camera.cpp)

add_executable(main main.cpp)

target_link_libraries(vec tuple)
target_link_libraries(point tuple)
target_link_libraries(matrix color vec point)
target_link_libraries(color vec point)
target_link_libraries(canvas color)
target_link_libraries(shape intersection)
target_link_libraries(shape material)
target_link_libraries(sphere shape)
target_link_libraries(camera ray)
target_link_libraries(lighting point_light material point vec)
target_link_libraries(world camera lighting shape canvas)
target_link_libraries(computation ray shape)

target_link_libraries(main world  lighting material point_light computation sphere  ray matrix vec point canvas)
